--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,3 +60,9 @@ set -sg escape-time 0
 # Reload tmux config
 bind r source-file ~/.tmux.conf
 
+
+#set -g focus-events on
+set -g status-style bg=default
+#set -g status-left-length 80
+#set -g status-right-length 80
+#set -g status-justify absolute-centre
