remove window titles tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,3 +66,7 @@ set -g status-style bg=default
 #set -g status-left-length 80
 #set -g status-right-length 80
 #set -g status-justify absolute-centre
+
+
+set -g set-titles off
+
